@@ -7,8 +7,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
 
 - $VERSION/Revision troubles CPAN.pm (e.g. Apache::Status)
 
-- server does not die if a PerlModule/PerlRequire dies
-
 - Apache::Server->keep_alive_timeout/timeout
 
 - $r->finfo needs to set PL_laststatval
