@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.17_01-dev
 
+PerlRequire/PerlModule will not let the server start if there is an
+error (bug introduced in 1.16_xx), thanks to Brian Moseley for the spot
+
 5.005_54+usethreads port [Brian P Millett <bpm@ec-group.com>]
 
 fix -w command line logic for Apache::Registry
